# dify-workflows

./: .gitignore  CLAUDE.md  README.md  sample-knowledge.txt
.claude/skills/: dify-dsl.md
.github/workflows/: export-daily.yml
dify-linter/: Cargo.toml
dify-linter/src/: lib.rs  linter.rs  main.rs  report.rs  types.rs
dify-linter/src/checks/: edges.rs  mod.rs  models.rs  nodes.rs  structure.rs  variables.rs
infra/: README.md  cdk.context.json  package-lock.json
infra/lib/: dify-stack.ts
infra/scripts/: user-data.sh
scripts/: export-workflows.py  get-access-token.py  lint-workflows.sh
workflows/: .gitkeep
workflows/deepresearch/: metadata.json  workflow.yml
workflows/speckit-clarify-要件明確化/: metadata.json  workflow.yml
workflows/speckit-complete/: README.md  workflow.yml  workflow_final.yml  workflow_v1_minimal.yml  workflow_v2_classifier.yml  workflow_v3_complete.yml  workflow_v4_full.yml
workflows/speckit-complete-final-30/: metadata.json  workflow.yml
workflows/speckit-complete-v2/: metadata.json  workflow.yml
workflows/speckit-complete-v4-full/: metadata.json  workflow.yml
workflows/speckit-complete-v5/: metadata.json  workflow.yml
workflows/speckit-complete-v5.1/: metadata.json  workflow.yml
workflows/speckit-v12/: metadata.json  workflow.yml
workflows/speckit-v13/: metadata.json  workflow.yml
workflows/speckit-v6/: metadata.json  workflow.yml
workflows/speckit-v8/: metadata.json  workflow.yml
workflows/speckit-v9/: metadata.json  workflow.yml
workflows/test/: metadata.json  workflow.yml
workflows/コード変換機/: metadata.json  (+1 more)
(+12 files in other folders)
