[package]
name = "dify-linter"
version = "0.1.0"
edition = "2021"
description = "Dify DSL Linter / Validator"
authors = ["yida"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
colored = "2.0"
thiserror = "1.0"

[[bin]]
name = "dify-linter"
path = "src/main.rs"

[lib]
name = "dify_linter"
path = "src/lib.rs"
